# src/routes/auth.routes.js
@@ -2,10 +2,11 @@ const express = require('express');
 const router = express.Router();
 const authController = require('../controllers/auth.controller');
 const validate = require('../middlewares/validate.middleware');
-const { registerSchema, loginSchema } = require('../validations/auth.validation');
+const { registerSchema, loginSchema, refreshTokenSchema } = require('../validations/auth.validation');
 
 // Auth Routes
 router.post('/register', validate(registerSchema), authController.register);
 router.post('/login', validate(loginSchema), authController.login);
+router.post('/refresh', validate(refreshTokenSchema), authController.refresh);
 
 module.exports = router;
